# socp_interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cppcheck.sh
include/: activeSolver.hpp  constraint.hpp  dynamicMatrix.hpp  ecosWrapper.hpp  expression.hpp  expressions.hpp  mosekWrapper.hpp  optimizationProblem.hpp  parameter.hpp  problem.hpp  scalar.hpp  secondOrderConeProgram.hpp  socp.hpp  socpInterface.hpp  socpSolver.hpp  variable.hpp
include/old_include/: constraint.hpp  optimizationProblem.hpp  secondOrderConeProgram.hpp  variable.hpp
old/: optimizationProblem.hpp
solvers/wrappers/include/: ecosWrapper.hpp  eicosWrapper.hpp  wrapperBase.hpp
solvers/wrappers/src/: ecosWrapper.cpp  eicosWrapper.cpp  wrapperBase.cpp
src/: constraint.cpp  ecosWrapper.cpp  example.cpp  expression.cpp  expressions.cpp  mosekWrapper.cpp  optimizationProblem.cpp  parameter.cpp  parameterMatrix.hpp  problem.cpp  scalar.cpp  secondOrderConeProgram.cpp  variable.cpp
src/tests/: matrix_test.cpp  parameter_test.cpp  plot_times.py  portfolio_test.cpp  socp_test.cpp
